<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_location"
        android:textSize="36sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205" />

     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/latitude1"
         android:textSize="30sp"
         />

    <TextView
        android:id="@+id/latitudeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0_0_0_0_0_0"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="25dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/long2"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/longitudeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/_0_0_0_0_"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="213dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adress"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/adress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/street_city_coutry"
        android:layout_marginBottom="20dp"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="351dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="517dp" />

</LinearLayout>